data/derived/fa15/progs/unify/prog2327.ml.out
Characters 93-98:
  else returnList @ ("1") 
                    ^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
